--- a/exercise/c_simple_types/Cargo.toml
+++ b/exercise/c_simple_types/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 authors = ["Nathan Stocks <nathan.stocks@gmail.com>"]
 edition = "2018"
 
+[lib]
+name = "ding_machine"
+path = "src/lib.rs"
+
 [dependencies]
